--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sn0wye/eslint-config",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": false,
   "description": "ESLint configuration used by Sn0wye.",
   "main": "react.js",
@@ -21,6 +21,8 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "prettier": "^2.6.2"
   },
   "peerDependencies": {
