--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sn0wye/eslint-config",
-  "version": "1.8.1",
+  "version": "2.0.0",
   "private": false,
   "description": "ESLint configuration used by Sn0wye.",
   "main": "react.js",
@@ -9,26 +9,15 @@
     "url": "git+https://github.com/sn0wye/eslint-config.git"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "eslint": "^7.23.0 || ^8.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-import-helpers": "^1.2.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-n": "^15.2.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-tailwindcss": "^3.6.2",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.5"
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "peerDependencies": {
-    "eslint": "^7.23.0 || ^8.0.0",
-    "typescript": ">=3.3.1"
+    "eslint": "^8.0.0",
+    "typescript": ">=5.0.0"
   },
   "bugs": {
     "url": "https://github.com/sn0wye/eslint-config/issues"
